--- a/index.html
+++ b/index.html
@@ -1,125 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-<link rel="stylesheet" href="./assets/reset.css">
-<link rel="stylesheet" href="./assets/style.css">
-  </head>
-  <body>
-    <header class="title">
-      <div class="container">
-      <a class="title-link" href="./index.html">Web<span class="title-item">Studio</span></a>
-      <nav>
-        <ul class="caption1">
-          <li class="caption1-list"><a class="caption1-list" href="./index.html">Студія</a></li>
-          <li class="caption1-list"><a class="caption1-list" href="./pages/portfolio.html">Портфоліо</a></li>
-          <li class="caption1-list"><a class="caption1-list" href="#">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul class="headline">
-        <li class="headline-list"><a class="headline-list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="headline-list"><a class="headline-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
-      </div>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+        integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./assets/reset.css">
+    <link rel="stylesheet" href="./assets/style.css">
+</head>
+<body>
+    <header class="header">
+        <div class="container header-box">
+            <a href="./index.html" class="header-logo">Web<span class="header-span">Studio</span></a>
+            <nav class="header-nav">
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="./index.html" class="nav-studio">Студія</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="./portfolio.html" class="nav-portfolio">Портфоліо</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-contacts">Контакти</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="header-list">
+                <li class="header-item">
+                    <a href="mailto:info@devstudio.com" class="header-gmail">info@devstudio.com</a>
+                </li>
+                <li class="header-item">
+                    <a href="tel:+380961111111" class="header-phone">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </div>
     </header>
     <main>
-      <section class="tagline">
-        <div class="container">
-        <h1 class="tagline-title">Ефективні рішення для вашого бізнесу</h1>
-        <button  type="button" class="tagline-button">Замовити послугу</button>
-      </div>
-      </section>
-      <section title>
-        <ul class="subtitle">
-          <div class="container">
-          <li>
-            <h2 class="subtitle-item1">УВАГА ДО ДЕТАЛЕЙ</h2>
-            <p class="subtitle-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h2 class="subtitle-item">ПУНКТУАЛЬНІСТЬ</h2>
-            <p class="subtitle-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h2 class="subtitle-item">ПЛАНУВАННЯ</h2>
-            <p class="subtitle-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h2 class="subtitle-item">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-            <p class="subtitle-text1">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </div>
-        </ul>
-      </section>
-      <section class="advantages">
-        <div class="container">
-        <h2 class="advantages-item">Чим ми займаємося</h2>
-        <ul>
-          <li class="advantages-img1"><img src="./img/comp.jpg" alt="img" /></li>
-          <li class="advantages-img2"><img src="./img/tel.jpg" alt="img" /></li>
-          <li class="advantages-img3"><img src="./img/tablet.jpg" alt="img" /></li>
-        </ul>
-      </div>
-      </section>
-      <section class="subject">
-      <div class="container">
-        <ul>
-          <li><h3 class="subject-item">Наша Команда</h3></li>
-          <li>
-            <img class="subject-img" src="./img/igor.jpg" alt="img" />
-            <h3 class="subject-title" class="section-title">Ігор Дем'яненко</h3>
-            <p class="subject-text">Product Designer</p>
-          </li>
-          <li>
-            <img class="subject-img" src="./img/olya.jpg" alt="img" />
-            <h3 class="subject-title">Ольга Рєпіна</h3>
-            <p class="subject-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img class="subject-img" src="./img/mikola.jpg" alt="img" />
-            <h3 class="subject-title">Микола Тарасов</h3>
-            <p class="subject-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./img/mihailo.jpg" alt="img" />
-            <h3 class="section-title">Михайло Єрмаков</h3>
-            <p class="section-text">UI Designer</p>
-          </li>
-        </ul>
-      </div>
-      </section>
+        <section class="hero">
+            <div class="container">
+                <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+                <button type="button" class="hero-button">Замовити послугу</button>
+            </div>
+        </section>
+        <section class="section-main">
+            <div class="container">
+                <ul class="section-list">
+                    <li class="section-item">
+                        <h2 class="section-title">
+                            УВАГА ДО ДЕТАЛЕЙ
+                        </h2>
+                        <p class="section-desc">
+                            Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                        </p>
+                    </li>
+                    <li class="section-item">
+                        <h2 class="section-title">
+                            ПУНКТУАЛЬНІСТЬ
+                        </h2>
+                        <p class="section-desc">
+                            Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                        </p>
+                    </li>
+                    <li class="section-item">
+                        <h2 class="section-title">
+                            ПЛАНУВАННЯ
+                        </h2>
+                        <p class="section-desc">
+                            Так само консультація з широким активом значною мірою зумовлює.
+                        </p>
+                    </li>
+                    <li class="section-item">
+                        <h2 class="section-title">
+                            СУЧАСНІ ТЕХНОЛОГІЇ
+                        </h2>
+                        <p class="section-desc">
+                            Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="whatwedo">
+            <div class="container">
+                <h2 class="whatwedo-title">Чим ми займаємося</h2>
+                <ul class="whatwedo-list">
+                    <li class="whatwedo-item">
+                        <img src="./img/tablet.jpg" alt="tablet" class="whatwedo-img">
+                    </li>
+                    <li class="whatwedo-item">
+                        <img src="./img/comp.jpg" alt="leptop" class="whatwedo-img">
+                    </li>
+                    <li class="whatwedo-item">
+                        <img src="./img/tel.jpg" alt="ipad" class="whatwedo-img">
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="ourteam">
+            <div class="container">
+                <h2 class="ourteam-title">Наша команда</h2>
+                <ul class="ourteam-list">
+                    <li class="ourteam-item">
+                        <img src="../img/igor.jpg" alt="igor_Product Designer" class="ourteam-img">
+                        <div class="ourteam-box">
+                            <h3 class="ourteam-text">Ігор Дем'яненко</h3>
+                            <p class="ourteam-desc">Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="ourteam-item">
+                        <img src="../img/olya.jpg" alt="olga_FrontendDeveloper" class="ourteam-img">
+                        <div class="ourteam-box">
+                            <h3 class="ourteam-text">Ольга Рєпіна</h3>
+                            <p class="ourteam-desc">Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="ourteam-item">
+                        <img src="../img/mikola.jpg" alt="mikola_Marketing" class="ourteam-img">
+                        <div class="ourteam-box">
+                            <h3 class="ourteam-text">Микола Тарасов</h3>
+                            <p class="ourteam-desc">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="ourteam-item">
+                        <img src="../img/mihailo.jpg" alt="michailo_UIDesigner" class="ourteam-img">
+                        <div class="ourteam-box">
+                            <h3 class="ourteam-text">Михайло Єрмаков</h3>
+                            <p class="ourteam-desc">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer class="footer">
-      <div class="container">
-      <a class="footer-link" href="./index.html">Web<span class="footer-item">Studio</span></a>
-      <address class="caption">
-        <a class="caption-link" href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
-          >м. Київ, пр-т Лесі Українки, 26</a>
-        
-        <ul class="heading">
-          <li ><a class="heading-list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li ><a class="heading-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
-    </div>
+        <div class="container">
+            <a href="./index.html" class="footer-logo">Web<span class="footer-span">Studio</span></a>
+            <address class="footer-adress">
+                <a href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
+                    target="_blank" class="footer-adress-link">м. Київ, пр-т Лесі Українки, 26</a>
+                <ul class="footer-list">
+                    <li class="footer-item">
+                        <a href="mailto:info@devstudio.com" class="footer-gmail">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="tel:+380961111111" class="footer-phone">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
-  </body>
+</body>
 </html>
