--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="./index.html" class="nav-studio">Студія</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./portfolio.html" class="nav-portfolio">Портфоліо</a>
+                        <a href="./pages/portfolio.html" class="nav-portfolio">Портфоліо</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-contacts">Контакти</a>
@@ -116,21 +116,21 @@
                         </div>
                     </li>
                     <li class="ourteam-item">
-                        <img src="../img/olya.jpg" alt="olga_FrontendDeveloper" class="ourteam-img">
+                        <img src="./img/olya.jpg" alt="olga_FrontendDeveloper" class="ourteam-img">
                         <div class="ourteam-box">
                             <h3 class="ourteam-text">Ольга Рєпіна</h3>
                             <p class="ourteam-desc">Frontend Developer</p>
                         </div>
                     </li>
                     <li class="ourteam-item">
-                        <img src="../img/mikola.jpg" alt="mikola_Marketing" class="ourteam-img">
+                        <img src="./img/mikola.jpg" alt="mikola_Marketing" class="ourteam-img">
                         <div class="ourteam-box">
                             <h3 class="ourteam-text">Микола Тарасов</h3>
                             <p class="ourteam-desc">Marketing</p>
                         </div>
                     </li>
                     <li class="ourteam-item">
-                        <img src="../img/mihailo.jpg" alt="michailo_UIDesigner" class="ourteam-img">
+                        <img src="./img/mihailo.jpg" alt="michailo_UIDesigner" class="ourteam-img">
                         <div class="ourteam-box">
                             <h3 class="ourteam-text">Михайло Єрмаков</h3>
                             <p class="ourteam-desc">UI Designer</p>
