--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
         integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/portfolio.css">
+    <link rel="stylesheet" href="../assets/reset.css">
+    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/normalize.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                         <a href="../index.html" class="nav-studio">Студія</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../portfolio.html" class="nav-portfolio">Портфоліо</a>
+                        <a href="../pages/portfolio.html" class="nav-portfolio">Портфоліо</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-contacts">Контакти</a>
@@ -46,21 +46,21 @@
         </div>
     </header>
     <main>
-        <section class="hero">
+        <section class="headline">
             <div class="container">
-                <button type="button" class="hero-button">
+                <button type="button" class="headline-button">
                     Усі
                 </button>
-                <button type="button" class="hero-button">
+                <button type="button" class="headline-button">
                     Веб-сайти
                 </button>
-                <button type="button" class="hero-button">
+                <button type="button" class="headline-button">
                     Додатки
                 </button>
-                <button type="button" class="hero-button">
+                <button type="button" class="headline-button">
                     Дизайн
                 </button>
-                <button type="button" class="hero-button">
+                <button type="button" class="headline-button">
                     Маркетинг
                 </button>
 
