--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <h2 class="ourteam-title">Наша команда</h2>
                 <ul class="ourteam-list">
                     <li class="ourteam-item">
-                        <img src="../img/igor.jpg" alt="igor_Product Designer" class="ourteam-img">
+                        <img src="./img/igor.jpg" alt="igor_Product Designer" class="ourteam-img">
                         <div class="ourteam-box">
                             <h3 class="ourteam-text">Ігор Дем'яненко</h3>
                             <p class="ourteam-desc">Product Designer</p>
