--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -14,6 +14,7 @@
         integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../assets/reset.css">
+    <link rel="stylesheet" href="../assets/portfolio.css">
     <link rel="stylesheet" href="../assets/style.css">
     <link rel="stylesheet" href="../assets/normalize.css">
 </head>
@@ -46,21 +47,21 @@
         </div>
     </header>
     <main>
-        <section class="headline">
+        <section class="hero1">
             <div class="container">
-                <button type="button" class="headline-button">
+                <button type="button" class="hero1-button">
                     Усі
                 </button>
-                <button type="button" class="headline-button">
+                <button type="button" class="hero1-button">
                     Веб-сайти
                 </button>
-                <button type="button" class="headline-button">
+                <button type="button" class="hero1-button">
                     Додатки
                 </button>
-                <button type="button" class="headline-button">
+                <button type="button" class="hero1-button">
                     Дизайн
                 </button>
-                <button type="button" class="headline-button">
+                <button type="button" class="hero1-button">
                     Маркетинг
                 </button>
 
@@ -71,7 +72,7 @@
                         <p class="main-desc">Веб-сайт</p>
                     </li>
                     <li class="main-item">
-                        <img src="./img/basketball.jpg" alt="basketball" class="main-img">
+                        <img src="../img/new orlean vs golden star.jpg" alt="basketball" class="main-img">
                         <h1 class="main-text">Постер New Orlean vs Golden Star</h1>
                         <p class="main-desc">Дизайн</p>
                     </li>
