--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -49,6 +49,7 @@
     <main>
         <section class="hero1">
             <div class="container">
+            <div class="button-box">
                 <button type="button" class="hero1-button">
                     Усі
                 </button>
@@ -64,52 +65,61 @@
                 <button type="button" class="hero1-button">
                     Маркетинг
                 </button>
-
+                </div>
                 <ul class="main-list">
                     <li class="main-item">
                         <img src="../img/technocrack.jpg" alt="leptop_website" class="main-img">
-                        <h1 class="main-text">Технокряк</h1>
+                       <div class="main-box"><h1 class="main-text">Технокряк</h1>
                         <p class="main-desc">Веб-сайт</p>
+                    </div>
                     </li>
                     <li class="main-item">
                         <img src="../img/new orlean vs golden star.jpg" alt="basketball" class="main-img">
-                        <h1 class="main-text">Постер New Orlean vs Golden Star</h1>
+                       <div class="main-box"><h1 class="main-text">Постер New Orlean vs Golden Star</h1>
                         <p class="main-desc">Дизайн</p>
+                    </div>
                     </li>
                     <li class="main-item">
                         <img src="../img/seafood.jpg" alt="logo_seafood" class="main-img">
-                        <h1 class="main-text">Ресторан Seafood</h1>
+                       <div class="main-box"> <h1 class="main-text">Ресторан Seafood</h1>
                         <p class="main-desc">Додаток</p>
+                    </div>
                     </li>
                     <li class="main-item">
-                        <img src="../img/prime.jpg" alt="headphones" class="main-img">
-                        <h1 class="main-text">Проєкт Prime</h1>
+                       <img src="../img/prime.jpg" alt="headphones" class="main-img">
+                       <div class="main-box"> <h1 class="main-text">Проєкт Prime</h1>
                         <p class="main-desc">Маркетинг</p>
+                    </div>
                     </li>
                     <li class="main-item">
                         <img src="../img/boxes.jpg" alt="2_boxes" class="main-img">
-                        <h1 class="main-text">Проєкт Boxes</h1>
+                       <div class="main-box"> <h1 class="main-text">Проєкт Boxes</h1>
                         <p class="main-desc">Додаток</p>
+                    </div>
                     </li>
                     <li class="main-item">
                         <img src="../img/inspiration has no borders.jpg" alt="monitor" class="main-img">
-                        <h1 class="main-text">Inspiration has no Borders</h1>
+                     <div class="main-box">  <h1 class="main-text">Inspiration has no Borders</h1>
                         <p class="main-desc">Веб-сайт</p>
+                    </div>
                     </li>
                     <li class="main-item">
-                        <img src="../img/limited edition.jpg" alt="book_LimitedEdition" class="main-img">
-                        <h1 class="main-text">Видання Limited Edition</h1>
+                       <img src="../img/limited edition.jpg" alt="book_LimitedEdition" class="main-img">
+                      <div class="main-box"> <h1 class="main-text">Видання Limited Edition</h1>
                         <p class="main-desc">Дизайн</p>
+                    </div>
                     </li>
                     <li class="main-item">
                         <img src="../img/lab.jpg" alt="tag" class="main-img">
-                        <h1 class="main-text">Проєкт LAB</h1>
+                      <div class="main-box"><h1 class="main-text">Проєкт LAB</h1>
                         <p class="main-desc">Маркетинг</p>
+                    </div>
                     </li>
                     <li class="main-item">
                         <img src="../img/growing business.jpg" alt="leptop_work" class="main-img">
-                        <h1 class="main-text">Growing Business</h1>
+                       <div class="main-box"><h1 class="main-text">Growing Business</h1>
                         <p class="main-desc">Додаток</p>
+                    </div>
                     </li>
 
                 </ul>
