--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -74,7 +74,7 @@
                     </div>
                     </li>
                     <li class="main-item">
-                        <img src="../img/new orlean vs golden star.jpg" alt="basketball" class="main-img">
+                        <img src="../img/neworleanvsgoldenstar.jpg" alt="basketball" class="main-img">
                        <div class="main-box"><h1 class="main-text">Постер New Orlean vs Golden Star</h1>
                         <p class="main-desc">Дизайн</p>
                     </div>
@@ -98,13 +98,13 @@
                     </div>
                     </li>
                     <li class="main-item">
-                        <img src="../img/inspiration has no borders.jpg" alt="monitor" class="main-img">
+                        <img src="../img/inspirationhasnoborders.jpg" alt="monitor" class="main-img">
                      <div class="main-box">  <h1 class="main-text">Inspiration has no Borders</h1>
                         <p class="main-desc">Веб-сайт</p>
                     </div>
                     </li>
                     <li class="main-item">
-                       <img src="../img/limited edition.jpg" alt="book_LimitedEdition" class="main-img">
+                       <img src="../img/limitededition.jpg" alt="book_LimitedEdition" class="main-img">
                       <div class="main-box"> <h1 class="main-text">Видання Limited Edition</h1>
                         <p class="main-desc">Дизайн</p>
                     </div>
@@ -116,7 +116,7 @@
                     </div>
                     </li>
                     <li class="main-item">
-                        <img src="../img/growing business.jpg" alt="leptop_work" class="main-img">
+                        <img src="../img/growingbusiness.jpg" alt="leptop_work" class="main-img">
                        <div class="main-box"><h1 class="main-text">Growing Business</h1>
                         <p class="main-desc">Додаток</p>
                     </div>
