--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -127,20 +127,55 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <a href="../index.html" class="footer-logo">Web<span class="footer-span">Studio</span></a>
-            <address class="footer-adress">
-                <a href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
-                    target="_blank" class="footer-adress-link">м. Київ, пр-т Лесі Українки, 26</a>
-                <ul class="footer-list">
-                    <li class="footer-item">
-                        <a href="mailto:info@devstudio.com" class="footer-gmail">info@devstudio.com</a>
+        <div class="container footerbox">
+            <div class="addressbox">
+                <a href="./index.html" class="footer-logo">Web<span class="footer-span">Studio</span></a>
+                <address class="footer-adress">
+                    <a href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
+                        target="_blank" class="footer-adress-link">м. Київ, пр-т Лесі Українки, 26</a>
+                    <ul class="footer-list">
+                        <li class="footer-item">
+                            <a href="mailto:info@devstudio.com" class="footer-gmail">info@devstudio.com</a>
+                        </li>
+                        <li class="footer-item">
+                            <a href="tel:+380961111111" class="footer-phone">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-links">
+                <h2 class="links-title">приєднуйтесь</h2>
+                <ul class="links-checklist">
+                    <li class="checklist-item">
+                        <a href="#" class="checklist-link">
+                            <svg class="checklist-image">
+                                <use href="../img/symbol-defs.svg#icon-icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="footer-item">
-                        <a href="tel:+380961111111" class="footer-phone">+38 096 111 11 11</a>
+                    <li class="checklist-item">
+                        <a href="#" class="checklist-link active">
+                            <svg class="checklist-image">
+                                <use href="../img/symbol-defs.svg#icon-icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="checklist-item">
+                        <a href="#" class="checklist-link">
+                            <svg class="checklist-image">
+                                <use href="../img/symbol-defs.svg#icon-icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="checklist-item">
+                        <a href="#" class="checklist-link">
+                            <svg class="checklist-image">
+                                <use href="../img/symbol-defs.svg#icon-icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
